--- a/MyBlog/style.css
+++ b/MyBlog/style.css
@@ -15,3 +15,10 @@ body{
     color: white;
     text-align: center; 
 }
+
+.blog-post{
+    background-color: white;
+    border: 2px solid black;
+    padding: 10px;
+    margin: 10px;
+}
