--- a/BredBlog/style.css
+++ b/BredBlog/style.css
@@ -22,3 +22,15 @@ body{
     padding: 10px;
     margin: 10px;
 }
+
+@media (min-width: 1000px){
+    .blog-post{
+        width: 70%;
+    }
+    #content{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+}
